[gd_scene load_steps=5 format=2]

[ext_resource path="res://contents/systems/drifter_spawner.gd" type="Script" id=1]
[ext_resource path="res://contents/entities/item_wood/item_wood.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 2690, -384, 0, 0, 0, 0, 2690, 1523, 0, 0, 0, 0, -624, 1516, 0, 0, 0, 0, -627, -381, 0, 0, 0, 0, 2309, -384, 0, 0, 0, 0, 2690, -384 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2800, 1688 )

[node name="DrifterSpawner" type="Node2D"]
script = ExtResource( 1 )
drifting_items = [ ExtResource( 2 ) ]

[node name="SpawnPath" type="Path2D" parent="."]
position = Vector2( -962, -509 )
curve = SubResource( 1 )

[node name="SpawnPathFollow" type="PathFollow2D" parent="SpawnPath"]
position = Vector2( 2690, -384 )
rotation = 1.5708

[node name="KillZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
shape = SubResource( 2 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_exited" from="KillZone" to="." method="_on_KillZone_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
